# netplayer

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/player/cn/com/netplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/player/cn/com/netplayer/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/player/cn/com/netplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
